--- a/index.html
+++ b/index.html
@@ -7347,13 +7347,7 @@ Ecuador (2024), el cual reclasificó a las bandas extorsionadoras como
 <h1>3. Metodología</h1>
 <div id="tipo-de-investigación" class="section level2">
 <h2>3.1 Tipo de investigación</h2>
-<p>El presente estudio se concentra en un enfoque descriptivo e
-inferencial. Se utiliza un diseño no experimental y longitudinal, puesto
-que se analizan datos históricos de denuncias por delitos extorsivos
-recopiladas durante un periodo de cuatro años (2021-2024) sin
-manipulación deliberada de variables. Dado que los datos no siguen una
-distribución normal, se plantearon las siguientes hipótesis estadísticas
-no paramétricas:</p>
+<p>El presente estudio se concentra en un enfoque inferencial para el cual es necesario realizar previamente un análisis exploratorio utilizando estadística descriptiva. Se utiliza un diseño no experimental y longitudinal, puesto que se analizan datos históricos de denuncias por delitos extorsivos recopiladas durante un periodo de cuatro años (2021-2024) sin manipulación deliberada de variables. Dado que los datos no siguen una distribución normal, se plantearon las siguientes hipótesis estadísticas no paramétricas:</p>
 <div id="para-la-asociación-espacial-chi-cuadrado" class="section level3">
 <h3>Para la Asociación Espacial (Chi-Cuadrado):</h3>
 <p><span class="math inline">\(H_0\)</span>: El nivel de peligrosidad es
@@ -7979,3 +7973,4 @@ $(document).ready(function ()  {
 
 </body>
 </html>
+
